--- a/purple/index.html
+++ b/purple/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <h2> thumbnails image </h2>
-    <p> Click on the image to enlarge it </p>
+    <p> Click on the image to enlarge the image </p>
     <a targe="_blank" href="pic/01.jpg">
         <img src="pic/01.jpg" alt="01" style="width:150px; height:150px" ;</a>
         <a targe="_blank" href="pic/02.jpg">
